<resources>
    <string name="app_name">SunmoonChat</string>
    <string name="text_logo_description">Sunmoon_Logo</string>
    <string name="text_email">E-Mail</string>
    <string name="text_pw">비밀번호</string>
    <string name="text_user_name">이름</string>
    <string name="text_user_nick_name">별명</string>
    <string name="text_login">로그인</string>
    <string name="text_join">회원가입</string>
    <string name="text_logout">로그아웃</string>
    <string name="text_cancel">취소</string>
    <string name="text_start_chat">채팅하기</string>
    <string name="text_new_chat">새로운 대화</string>
    <string name="text_send">보내기</string>
</resources>